--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -162,7 +162,7 @@
     <script>
         // Load navigation rail component
         document.addEventListener('DOMContentLoaded', () => {
-            loadComponent('navRail', '/views/components/side-menu.ejs');
+            loadComponent('navRail', '/components/side-menu');
         });
 
         // Modal functionality
