--- a/assets/css/create_user.css
+++ b/assets/css/create_user.css
@@ -14,7 +14,6 @@ body {
     color: #333333;
     display: flex;
     font-size: 20px;
-    font-weight: 700;
     line-height: 24px; /* 120% */
     letter-spacing: 0.4px;
 }
@@ -872,10 +871,12 @@ body {
 }
 
 .modal-message {
+    color: var(--Colour-text-accent-grey, #767676);
     font-size: 14px;
-    color: #6b7280;
-    line-height: 1.5;
-    margin: 0;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 0.28px;
 }
 
 .modal-actions {
