--- a/views/add_case.ejs
+++ b/views/add_case.ejs
@@ -331,7 +331,7 @@
     <script>
         // Load navigation rail component
         document.addEventListener('DOMContentLoaded', () => {
-            loadComponent('navRail', '/views/components/side-menu.ejs');
+            loadComponent('navRail', '/components/side-menu');
         });
 
         // File upload handling
