--- a/views/components/side-menu.ejs
+++ b/views/components/side-menu.ejs
@@ -39,7 +39,7 @@
             </div>
 
             <!-- User Management -->
-            <div class="nav-item" id="userManagementNav" data-user-role="">
+            <div class="nav-item" id="userManagementNav" data-user-role="<%= user && user[0] ? user[0].role : '' %>">
                 <a class="rail-btn" href="/user-management" title="User Management">
                     <img src="/assets/images/user-management-icon.svg" alt="Users" class="icon-default" />
                     <img src="/assets/images/user-management-icon-hover.svg" alt="Users" class="icon-hover" />
@@ -74,8 +74,8 @@
         <!-- User menu -->
         <div class="menu-container user-container">
             <button id="userBtn" class="user-fab" title="Account">
-                <span class="user-initial">K</span>
-                <span class="user-name">Kayley Chai Min...</span>
+                <span class="user-initial"><%= user[0].fullName.charAt(0) %></span>
+                <span class="user-name"><%= user[0].fullName %></span>
             </button>
             <div id="userMenu" class="dropdown-menu user-menu-dropdown">
                 <a href="/profile" class="menu-item">Profile</a>
