--- a/views/create_user.ejs
+++ b/views/create_user.ejs
@@ -238,7 +238,7 @@
     <script>
         // Load navigation rail component
         document.addEventListener('DOMContentLoaded', () => {
-            loadComponent('navRail', '/views/components/side-menu.ejs');
+            loadComponent('navRail', '/components/side-menu');
         });
 
         // Password toggle functionality
