--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -214,7 +214,7 @@
     <script>
         // Load navigation rail component
         document.addEventListener('DOMContentLoaded', () => {
-            loadComponent('navRail', '/views/components/side-menu.ejs');
+            loadComponent('navRail', '/components/side-menu');
         });
 
         // Password toggle functionality
